# opentracing-c

./: .clang-format  .clang-tidy  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile.in  README.adoc  README.adoc.in  README.html  README.md  annotated.html  classes.html  codecov.yml  common_8h.html  common_8h__dep__incl.map  common_8h__dep__incl.md5  common_8h__incl.map  common_8h__incl.md5  common_8h_source.html  config_8h.html  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.map  config_8h__incl.md5  config_8h_source.html  destructible_8h.html  destructible_8h__dep__incl.map  destructible_8h__dep__incl.md5  destructible_8h__incl.map  destructible_8h__incl.md5  destructible_8h_source.html  dir_000001_000000.html  dir_0b7dae63e7085bdb65ae52be05279862.html  dir_4468f5f615dfbda8f4f3e4fe683c6332.html  dir_4468f5f615dfbda8f4f3e4fe683c6332_dep.map  dir_4468f5f615dfbda8f4f3e4fe683c6332_dep.md5  dir_a2f509d7c7ff609c057fe29c145c0519.html  dynamic__load_8h.html  dynamic__load_8h__incl.map  dynamic__load_8h__incl.md5  (+151 more)
cmake/: CheckAttributes.cmake  CheckHaveWeakSymbols.cmake  CodeCoverage.cmake  GenerateDocumentation.cmake  attribute_keyword_test.c  specific_attribute_test.c  toolchain.cmake  weak_symbols_test.c
examples/: existing_span.c  extract.c  inject.c  main.c  new_span.c  text_map.h  text_map_iterator.h  tracing_impl.c
scripts/: build.sh  clang-format.sh  clang-tidy.sh  generate-doc.sh  install-deps.sh  llvm-gcov.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  search.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js  variables_d.js
snippets/: existing_span.c  existing_span.h  existing_span_snippet.c  extract.c  extract.h  extract_snippet.c  inject.c  inject.h  inject_snippet.c  main.c  new_span.c  new_span.h  new_span_snippet.c  text_map.c  text_map_iterator.c  tracing_impl.c  tracing_impl.h
src/opentracing-c/: common.h  config.h  config.h.in  destructible.h  dynamic_load.c  dynamic_load.h  propagation.h  span.h  tracer.c  tracer.h  tracer_factory.h  value.h  visibility.h
test/: dynamic_load_test.c  mock_tracing_lib.c  mock_tracing_lib_names.h.in  tracer_test.c
